--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ForgetActivity"></activity>
+        <activity android:name=".ForgetActivity"/>
         <activity android:name=".StatusActivity" />
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ChatActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".LoginActivity" />
-        <activity
-            android:name=".HomeActivity"
-            android:label="@string/app_name">
+        <activity android:name=".LoginActivity"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity"/>
     </application>
 
 </manifest>
