--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ForgetActivity"/>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".ChangeProfileImageActivity"
+                  android:theme="@style/AppTheme" />
+        <activity android:name=".ForgetActivity" />
         <activity android:name=".StatusActivity" />
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".ChatActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".LoginActivity"
-                  android:label="@string/app_name">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".HomeActivity" />
     </application>
 
 </manifest>
